Tweak travis memory